--- a/TemplateDrivenForms/src/app/app.component.html
+++ b/TemplateDrivenForms/src/app/app.component.html
@@ -17,7 +17,19 @@
     <small class="form-text text-muted">{{focus ? 'Focused in' : 'Focused out'}}</small>
   </div>
 
-  <h3>Complex form (using a class)</h3>
+  <h3 class="mt-3"><code>&lt;select/&gt;</code> and <code>&lt;option/&gt;</code></h3>
+  <div class="form-group">
+    <label>Options: </label>
+    <select class="form-select" [(ngModel)]="option" name="option">
+      <option>Option 1</option>
+      <option>Option 2</option>
+      <option>Option 3</option>
+      <option>Option 4</option>
+    </select>
+    <small class="form-text text-muted">Selected option: {{option}}</small>
+  </div>
+
+  <h3 class="mt-3">Complex form (using a class)</h3>
   <form (ngSubmit)="printUserInfo()">
     <h4>Register</h4>
     <div class="d-flex flex-row gap-2">
